Creacion controlador e implementacion de H2 Se agregaron propiedades en el archivo aplication properties para la implementacion de JPA y H2. Ademas de crear el controlador para la plantilla de wikigroup.

--- a/src/main/resources/templates/wikigroup.html
+++ b/src/main/resources/templates/wikigroup.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiGroup</title>
-    
+    <title>Nuestro Equipo</title>
+    <link rel="stylesheet" href="/src/main/resources/static/css/styles.css">
 </head>
 <body>
-    
+    <h1>Conoce a nuestro equipo</h1>
+    <div class="team-container">
+        <div th:each="member : ${teamMembers}" class="team-member">
+            <img th:src="@{${member.imageUrl}}" alt="Foto de [[${member.name}]]">
+            <h2 th:text="${member.name}">Nombre del miembro</h2>
+            <h3 th:text="${member.role}">Rol del miembro</h3>
+            <p th:text="${member.bio}">Descripción del miembro</p>
+        </div>
+    </div>
+
+    <script src="/src/main/resources/static/js/script.js"></script>
 </body>
 </html>
