integracion-de-css-en-pagina-principal

--- a/src/main/resources/templates/wikigroup.html
+++ b/src/main/resources/templates/wikigroup.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestro Equipo</title>
-    <link rel="stylesheet" href="/src/main/resources/static/css/styles.css">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <h1>Conoce a nuestro equipo</h1>
@@ -17,6 +18,6 @@
         </div>
     </div>
 
-    <script src="/src/main/resources/static/js/script.js"></script>
+    <script th:src="@{/js/script.js}"></script>
 </body>
 </html>
