integracion-de-base-de-datos-y-de-formulario

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
             <a href="#" style="--i:3;">Pruebas</a>
             <a href="#" style="--i:4;">Despliegue</a>
             <a href="#" style="--i:5;">Para desarrollo</a>
-            <a href="#" style="--i:6;">Contactanos</a>
+            <a href="/controllers/formulario" style="--i:6;">Contactanos</a>
         </nav>
     </header>
     <script th:src="@{/js/script.js}"></script>
