formulario-integracion-debase-de-datos-completos

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -137,4 +137,78 @@ body {
     opacity: 1;
 
    }
+
+   
 }
+
+ /* Estilos generales para el formulario de contacto */
+.form-container {
+    max-width: 600px; /* Máximo ancho del contenedor del formulario */
+    margin: 0 auto; /* Centra el contenedor horizontalmente */
+    padding: 50px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 100px; /* Ajusta según el tamaño del header */
+}
+.form-container h1{
+    text-align: center;
+    top: 0;
+    bottom: 15px;
+}
+
+/* Estilos del formulario */
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form label {
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+form input[type="text"],
+form input[type="email"],
+form input[type="number"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-bottom: 15px;
+}
+
+form button {
+    padding: 10px 20px;
+    border: none;
+    background: #007bff;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s;
+}
+
+form button:hover {
+    background-color: #0056b3;
+}
+
+/* Mensaje de confirmación */
+.message {
+    display: none; /* Inicialmente oculto */
+    opacity: 0;    /* Inicialmente invisible */
+    transition: opacity 0.3s ease; /* Transición suave para el cambio de opacidad */
+    margin: 20px; /* Margen opcional */
+    padding: 10px; /* Padding opcional */
+    background-color: #d4edda; /* Fondo verde claro */
+    color: #155724; /* Color de texto verde oscuro */
+    border: 1px solid #c3e6cb; /* Borde verde claro */
+    border-radius: 4px; /* Bordes redondeados */
+}
+
+.message.visible {
+    display: block;
+    opacity: 1;
+}
+
+
