--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -27,33 +27,38 @@
       </nav>
   </header>
 
-  <h1>Formulario de Contacto</h1>
+  <main>
+    
+    <!-- Mostrar mensaje de confirmación si existe -->
+    <div class="message">
+        <p>Mensaje de confirmación</p>
+    </div>
 
-  <!-- Mostrar mensaje de confirmación si existe -->
-  <div th:if="${message}">
-      <p th:text="${message}"></p>
-  </div>
+    <!-- Contenedor para el formulario -->
+    <div class="form-container">
+        <h1>Formulario de Contacto</h1>
+        <!-- Formulario para enviar contacto -->
+        <form action="/controllers/formulario" method="post">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" required>
+            <br>
+            <label for="lastname">Apellido:</label>
+            <input type="text" id="lastname" name="lastname" required>
+            <br>
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
+            <br>
+            <label for="phone">Teléfono:</label>
+            <input type="number" id="phone" name="phone" required>
+            <br>
+            <label for="city">Ciudad:</label>
+            <input type="text" id="city" name="city" required>
+            <br>
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+</main>
+<script th:src="@{/js/script.js}"></script>
 
-  <!-- Formulario para enviar contacto -->
-  <form action="#" th:action="@{/controllers/formulario}" th:object="${formulario}" method="post">
-      <label for="name">Nombre:</label>
-      <input type="text" id="name" th:field="*{name}" required>
-      <br>
-      <label for="lastname">Apellido:</label>
-      <input type="text" id="lastname" th:field="*{lastname}" required>
-      <br>
-      <label for="email">Correo Electrónico:</label>
-      <input type="email" id="email" th:field="*{email}" required>
-      <br>
-      <label for="phone">Teléfono:</label>
-      <input type="number" id="phone" th:field="*{phone}" required>
-      <br>
-      <label for="city">Ciudad:</label>
-      <input type="text" id="city" th:field="*{city}" required>
-      <br>
-      <button type="submit">Enviar</button>
-
-  
-  <script th:src="@{/js/script.js}"></script>
 </body>
 </html>
