--- a/src/main/resources/templates/wikigroup.html
+++ b/src/main/resources/templates/wikigroup.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuestro Equipo</title>
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
-<body>
-    <h1>Conoce a nuestro equipo</h1>
-    <div class="team-container">
-        <div th:each="member : ${teamMembers}" class="team-member">
-            <img th:src="@{${member.imageUrl}}" alt="Foto de [[${member.name}]]">
-            <h2 th:text="${member.name}">Nombre del miembro</h2>
-            <h3 th:text="${member.role}">Rol del miembro</h3>
-            <p th:text="${member.bio}">Descripción del miembro</p>
+    <link rel="stylesheet" th:href="@{/css/styles.css}" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <a href="/" class="logo">Bienvenidos a tu casa</a>
+      <input type="checkbox" id="check" />
+      <label for="check" class="icons">
+        <i class="bx bx-menu" id="icon-menu"></i>
+        <i class="bx bx-x" id="icon-close"></i>
+      </label>
+      <nav class="navegacion">
+        <a href="/controllers/wikigroup">Nuestro equipo</a>
+        <a href="#" style="--i: 0">Descripcion</a>
+        <a href="#" style="--i: 1">Requerimientos</a>
+        <a href="#" style="--i: 2">Arquitectura</a>
+        <a href="#" style="--i: 3">Pruebas</a>
+        <a href="#" style="--i: 4">Despliegue</a>
+        <a href="#" style="--i: 5">Para desarrollo</a>
+        <a href="/controllers/formulario" style="--i: 6">Contactanos</a>
+      </nav>
+    </header>
+    <div class="wikigroup-container">
+      <div class="wikigroup">
+        <h1 class="title">Conoce a nuestro equipo</h1>
+        <div class="team-list">
+          <div th:each="member : ${teamMembers}" class="member">
+            <img th:src="@{${member.imageUrl}}" alt="Foto de miembro" />
+            <h2 th:text="${member.name}" class="name">Nombre del miembro</h2>
+            <h3 th:text="${member.role}" class="role">Rol del miembro</h3>
+            <p th:text="${member.bio}" class="bio">Descripción del miembro</p>
+          </div>
         </div>
+      </div>
     </div>
-
     <script th:src="@{/js/script.js}"></script>
-</body>
+  </body>
 </html>
