--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -28,7 +28,6 @@
   </header>
 
   <main>
-    
     <!-- Mostrar mensaje de confirmación si existe -->
     <div class="message">
         <p>Mensaje de confirmación</p>
@@ -38,22 +37,28 @@
     <div class="form-container">
         <h1>Formulario de Contacto</h1>
         <!-- Formulario para enviar contacto -->
-        <form action="/controllers/formulario" method="post">
+        <form id="contactForm" action="/controllers/formulario" method="post">
             <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="name" required maxlength="50">
+            <div class="char-counter" id="nameCounter">0/50</div>
             <br>
             <label for="lastname">Apellido:</label>
-            <input type="text" id="lastname" name="lastname" required>
+            <input type="text" id="lastname" name="lastname" required maxlength="50">
+            <div class="char-counter" id="lastnameCounter">0/50</div>
             <br>
             <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required maxlength="100">
+            <div class="char-counter" id="emailCounter">0/100</div>
             <br>
-            <label for="phone">Teléfono:</label>
-            <input type="number" id="phone" name="phone" required>
+            <label for="semestre">Semestre:</label>
+            <input type="number" id="semestre" name="semestre" required min="1" max="16">
+            <div class="char-counter" id="semestreCounter"></div>
             <br>
-            <label for="city">Ciudad:</label>
-            <input type="text" id="city" name="city" required>
+            <label for="descripcion">Descripción:</label>
+            <input type="text" id="descripcion" name="descripcion" required maxlength="200">
+            <div class="char-counter" id="descripcionCounter">0/200</div>
             <br>
+            <div class="error-message" id="errorMessage"></div>
             <button type="submit">Enviar</button>
         </form>
     </div>
