arreglos para implementar servidor de apache

--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link rel="stylesheet"  href="/css/styles.css" th:href="@{/css/styles.css}">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Bienvenidos a tu casa</a>
+        <a href="/" class="logo">Bienvenidos a tu casa</a>
         <input type="checkbox" id="check">
        <label for="check" class="icons">
           <i class='bx bx-menu' id="icon-menu"></i>
@@ -63,7 +63,7 @@
         </form>
     </div>
 </main>
-<script th:src="@{/js/script.js}"></script>
+<script src="/js/script.js"  th:src="@{/js/script.js}"></script>
 
 </body>
 </html>
