--- a/src/main/resources/templates/wikigroup.html
+++ b/src/main/resources/templates/wikigroup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuestro Equipo</title>
-    <link rel="stylesheet" th:href="@{/css/styles.css}" />
+    <link rel="stylesheet" href="/css/styles.css"  th:href="@{/css/styles.css}"/>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -29,6 +29,7 @@
         <a href="/controllers/formulario" style="--i: 6">Contactanos</a>
       </nav>
     </header>
+    
     <div class="wikigroup-container">
       <div class="wikigroup">
         <h1 class="title">Conoce a nuestro equipo</h1>
@@ -42,6 +43,6 @@
         </div>
       </div>
     </div>
-    <script th:src="@{/js/script.js}"></script>
+    <script src="/js/script.js"  th:src="@{/js/script.js}"></script>
   </body>
 </html>
