--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -132,152 +132,149 @@ body {
   }
 }
 
-
-
- /* Estilos generales para el formulario de contacto */
+/* Estilos generales para el form de contacto */
 .form-container {
-    max-width: 600px; /* Máximo ancho del contenedor del formulario */
-    margin: 0 auto; /* Centra el contenedor horizontalmente */
-    padding: 50px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 100px; /* Ajusta según el tamaño del header */
+  max-width: 600px; /* Máximo ancho del contenedor del form */
+  margin: 0 auto; /* Centra el contenedor horizontalmente */
+  padding: 50px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 100px; /* Ajusta según el tamaño del header */
 }
-.form-container h1{
-    text-align: center;
-    top: 0;
-    bottom: 15px;
+.form-container h1 {
+  text-align: center;
+  top: 0;
+  bottom: 15px;
 }
 
-/* Estilos del formulario */
+/* Estilos del form */
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 form label {
-    margin-bottom: 8px;
-    font-weight: bold;
+  margin-bottom: 8px;
+  font-weight: bold;
 }
 
-form input[type="text"],
-form input[type="email"],
-form input[type="number"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    margin-bottom: 15px;
+form input[type='text'],
+form input[type='email'],
+form input[type='number'] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 15px;
 }
 
 form button {
-    padding: 10px 20px;
-    border: none;
-    background: #007bff;
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1em;
-    transition: background-color 0.3s;
+  padding: 10px 20px;
+  border: none;
+  background: #007bff;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+  transition: background-color 0.3s;
 }
 
 form button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 /* Mensaje de confirmación */
 .message {
-    display: none; /* Inicialmente oculto */
-    opacity: 0;    /* Inicialmente invisible */
-    transition: opacity 0.3s ease; /* Transición suave para el cambio de opacidad */
-    margin: 20px; /* Margen opcional */
-    padding: 10px; /* Padding opcional */
-    background-color: #d4edda; /* Fondo verde claro */
-    color: #155724; /* Color de texto verde oscuro */
-    border: 1px solid #c3e6cb; /* Borde verde claro */
-    border-radius: 4px; /* Bordes redondeados */
+  display: none; /* Inicialmente oculto */
+  opacity: 0; /* Inicialmente invisible */
+  transition: opacity 0.3s ease; /* Transición suave para el cambio de opacidad */
+  margin: 20px; /* Margen opcional */
+  padding: 10px; /* Padding opcional */
+  background-color: #d4edda; /* Fondo verde claro */
+  color: #155724; /* Color de texto verde oscuro */
+  border: 1px solid #c3e6cb; /* Borde verde claro */
+  border-radius: 4px; /* Bordes redondeados */
 }
 
 .message.visible {
-    display: block;
-    opacity: 1;
+  display: block;
+  opacity: 1;
 }
 .char-counter {
-    font-size: 0.8em;
-    color: #555;
+  font-size: 0.8em;
+  color: #555;
 }
 
 input.error {
-    border-color: red;
+  border-color: red;
 }
 
 .error-message {
-    color: red;
-    font-size: 0.9em;
+  color: red;
+  font-size: 0.9em;
 }
 
 .wikigroup-container {
-    margin-top: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+
+  .wikigroup {
+    display: inline-block;
+    /* background-color: rgba(61, 61, 61); */
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    border-radius: 20px;
     text-align: center;
-  
-    .wikigroup {
-      display: inline-block;
-      /* background-color: rgba(61, 61, 61); */
-      /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
-      border-radius: 20px;
-      text-align: center;
-  
-      color: white;
-  
-      .title {
-        margin-bottom: 40px;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 38px;
-        text-shadow: 2px 2px 4px #000000;
-      }
-  
-      .team-list {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 30px;
-  
-        .member {
-          text-align: center;
+
+    color: white;
+
+    .title {
+      margin-bottom: 40px;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 38px;
+      text-shadow: 2px 2px 4px #000000;
+    }
+
+    .team-list {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
+
+      .member {
+        text-align: center;
+        border-radius: 10px;
+        padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: rgb(22, 30, 54);
+
+        .name {
+          padding: 5px 0;
+        }
+
+        .role {
+          font-size: 20px;
+          padding-bottom: 8px;
+          color: rgba(118, 152, 232, 0.594);
+        }
+
+        img {
+          height: 200px;
+          width: 100%;
+          object-fit: cover;
           border-radius: 10px;
-          padding: 20px;
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-          background-color: rgb(22, 30, 54);
-  
-          .name {
-            padding: 5px 0;
-          }
-  
-          .role {
-            font-size: 20px;
-            padding-bottom: 8px;
-            color: rgba(118, 152, 232, 0.594);
-          }
-  
-          img {
-            height: 200px;
-            width: 100%;
-            object-fit: cover;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-          }
-     }
+        }
+      }
+    }
   }
-  }
-  }
+}
 
-
-  /* Estilos de pruebas */
+/* Estilos de pruebas */
 
 /* Estilos del Modal */
 .modal-overlay {
@@ -343,7 +340,6 @@ input.error {
   font-size: 16px; /* Tamaño de la descripción */
   color: #333; /* Color del texto */
 }
-
 
 main {
   margin-top: 100px; /* Ajusta este valor según el tamaño del header */
@@ -414,27 +410,27 @@ h2 {
 /* Estilos Responsivos */
 @media (max-width: 992px) {
   .pruebas-container {
-      justify-content: center; /* Asegura el centrado en pantallas más pequeñas */
+    justify-content: center; /* Asegura el centrado en pantallas más pequeñas */
   }
 
   .pruebas-column {
-      max-width: 100%;
-      margin: 10px 0; /* Espacio vertical entre columnas en pantallas más pequeñas */
+    max-width: 100%;
+    margin: 10px 0; /* Espacio vertical entre columnas en pantallas más pequeñas */
   }
 }
 
 @media (max-width: 768px) {
   .pruebas-container {
-      flex-direction: column;
-      justify-content: center; /* Asegura el centrado en pantallas más pequeñas */
+    flex-direction: column;
+    justify-content: center; /* Asegura el centrado en pantallas más pequeñas */
   }
 
   .pruebas-column {
-      max-width: 100%;
-      align-items: center; /* Alinea los elementos al centro en pantallas pequeñas */
+    max-width: 100%;
+    align-items: center; /* Alinea los elementos al centro en pantallas pequeñas */
   }
 
   .prueba-item {
-      max-width: 100%;
+    max-width: 100%;
   }
 }
