--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -137,7 +137,7 @@ body {
   max-width: 600px; /* Máximo ancho del contenedor del form */
   margin: 0 auto; /* Centra el contenedor horizontalmente */
   padding: 50px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, .80);
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 100px; /* Ajusta según el tamaño del header */
@@ -146,6 +146,7 @@ body {
   text-align: center;
   top: 0;
   bottom: 15px;
+  color: #000000;
 }
 
 /* Estilos del form */
@@ -376,7 +377,7 @@ h2 {
 }
 
 .prueba-item {
-  background-color: white;
+  background-color: rgba(255, 255, 255, .80);
   margin: 10px 0; /* Espacio entre elementos dentro de la columna */
   padding: 20px;
   border-radius: 8px;
@@ -432,5 +433,68 @@ h2 {
 
   .prueba-item {
     max-width: 100%;
+  }
+}
+
+
+/*seccion de deployment*/
+
+.deployment-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0 40px;
+  gap: 20px;
+}
+
+.deployment-item {
+  background-color: rgba(255, 255, 255, .80);
+  margin: 10px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.deployment-imagen {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.deployment-text {
+  margin-top: 15px;
+  text-align: center;
+  color: #333;
+}
+
+.deployment-text p {
+  margin: 5px 0;
+}
+
+details {
+  margin-top: 10px;
+  text-align: left;
+}
+
+details summary {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .deployment-container {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .deployment-item {
+      max-width: 100%;
   }
 }
