sheetstyle config under navbar done [form-container margin-top misstake]

--- a/src/main/resources/templates/wikigroup.html
+++ b/src/main/resources/templates/wikigroup.html
@@ -19,7 +19,7 @@
 
     <div class="wikigroup-container">
       <div class="wikigroup">
-        <h1 class="title">Conoce a nuestro equipo</h1>
+        <h1 class="title">Conoce nuestro equipo</h1>
         <div class="team-list">
           <div th:each="member : ${teamMembers}" class="member">
             <img th:src="@{${member.imageUrl}}" alt="Foto de miembro" />
