--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -6,10 +6,8 @@
 }
 
 body {
-  min-height: 100vh;
-  background: url('/images/image.png') no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-color: #c3e6cb;
+  margin-top: 20%;
 }
 /* navegacion principal*/
 .header {
@@ -140,7 +138,6 @@ body {
   background-color: rgba(255, 255, 255, .80);
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-top: 100px; /* Ajusta según el tamaño del header */
 }
 .form-container h1 {
   text-align: center;
