--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -215,6 +215,7 @@ input.error {
   color: red;
   font-size: 0.9em;
 }
+/* estilos wiki */
 
 .wikigroup-container {
   margin-top: 80px;
@@ -234,11 +235,12 @@ input.error {
     color: white;
 
     .title {
-      margin-bottom: 40px;
+      margin-bottom: 60px;
       text-transform: uppercase;
       font-weight: 700;
       font-size: 38px;
       text-shadow: 2px 2px 4px #000000;
+
     }
 
     .team-list {
