--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -7,8 +7,27 @@
 
 body {
   background-color: #c3e6cb;
-  margin-top: 20%;
+  margin-top: 10%;
 }
+
+/* text-container */
+
+.text-container {
+  margin: 0 auto;
+  width: 50%;
+  padding: 20px;
+  
+
+}
+
+.text-container h1 {
+  padding: 15px 15%;
+}
+
+.text-container p{
+  text-align: justify;
+}
+
 /* navegacion principal*/
 .header {
   position: absolute;
@@ -219,56 +238,77 @@ input.error {
   align-items: center;
   height: 100vh;
   text-align: center;
+  padding: 20px; /* Añade algo de relleno alrededor del contenedor */
+  box-sizing: border-box; /* Asegura que el padding no se sume al ancho total */
+}
 
-  .wikigroup {
-    display: inline-block;
-    /* background-color: rgba(61, 61, 61); */
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
-    border-radius: 20px;
-    text-align: center;
-    color: white;
+.wikigroup {
+  display: inline-block;
+  background-color: rgba(61, 61, 61, 0.8);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  max-width: 800px;
+  width: 100%;
+  margin: auto;
+}
 
-    .title {
-      margin-bottom: 40px;
-      text-transform: uppercase;
-      font-weight: 700;
-      font-size: 38px;
-      text-shadow: 2px 2px 4px #000000;
-    }
+.title {
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 38px;
+  text-shadow: 2px 2px 4px #000000;
+}
 
-    .team-list {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 30px;
+.team-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+}
 
-      .member {
-        text-align: center;
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        background-color: rgb(22, 30, 54);
+.member {
+  text-align: center;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: rgb(22, 30, 54);
+  transition: transform 0.3s;
+}
 
-        .name {
-          padding: 5px 0;
-        }
+.member:hover {
+  transform: scale(1.05);
+}
 
-        .role {
-          font-size: 20px;
-          padding-bottom: 8px;
-          color: rgba(118, 152, 232, 0.594);
-        }
+.name {
+  padding: 5px 0;
+}
 
-        img {
-          height: 200px;
-          width: 100%;
-          object-fit: cover;
-          border-radius: 10px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-      }
-    }
+.role {
+  font-size: 20px;
+  padding-bottom: 8px;
+  color: rgba(118, 152, 232, 0.594);
+}
+
+img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+  .team-list {
+    grid-template-columns: 1fr;
   }
 }
+
+
+
 
 /* Estilos de pruebas */
 
@@ -493,3 +533,4 @@ details summary {
       max-width: 100%;
   }
 }
+
