--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -7,8 +7,84 @@
 
 body {
   background-color: #c3e6cb;
-  margin-top: 20%;
+  margin-top: 10%;
 }
+
+/* arquitectura */
+.arquitecture-container {
+  padding: 20px;
+}
+
+.title {
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.diagram-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.diagram-item {
+  text-align: center;
+}
+
+.diagram-item img {
+  max-width: 100%;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+}
+
+.diagram-item img:hover {
+  transform: scale(1.05);
+}
+
+/* Styles for the modal */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.8); /* Black with opacity */
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.modal-content img {
+  width: 100%;
+  height: auto;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
 /* navegacion principal*/
 .header {
   position: absolute;
@@ -494,4 +570,45 @@ details summary {
   .deployment-item {
       max-width: 100%;
   }
+}
+
+/*estilos para los endpoints*/
+
+.api-endpoints-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.api-endpoint-item {
+  background-color: #f5f5f5;
+  margin-bottom: 20px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.api-endpoint-item h3 {
+  color: #333;
+}
+
+.api-endpoint-item p {
+  color: #555;
+}
+
+.api-endpoint-item ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.api-endpoint-item ul li {
+  margin-bottom: 5px;
+}
+
+.api-endpoint-item pre {
+  background-color: #e8e8e8;
+  padding: 10px;
+  border-radius: 5px;
+  overflow-x: auto;
+  max-width: 100%;
 }
