--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -13,7 +13,7 @@
       <a href="/controllers/arquitecture" style="--i: 2">Arquitectura</a>
       <a href="/controllers/pruebas" style="--i: 3">Pruebas</a>
       <a href="/controllers/deployment" style="--i: 4">Despliegue</a>
-      <a href="#" style="--i: 5">Para desarrollo</a>
+      <a href="/controllers/endpoint" style="--i: 5">Para desarrollo</a>
       <a href="/controllers/form" style="--i: 6">Contactanos</a>
     </nav>
  </header>
